[gd_scene load_steps=14 format=2]

[ext_resource path="res://images/slime/slime0002.png" type="Texture" id=1]
[ext_resource path="res://images/slime/slime0001.png" type="Texture" id=2]
[ext_resource path="res://images/slime/slime0000.png" type="Texture" id=3]
[ext_resource path="res://images/slime/slime0003.png" type="Texture" id=4]
[ext_resource path="res://images/slime/slime0004.png" type="Texture" id=5]
[ext_resource path="res://images/slime/slime0005.png" type="Texture" id=6]
[ext_resource path="res://images/slime/slime0006.png" type="Texture" id=7]
[ext_resource path="res://images/slime/slime0007.png" type="Texture" id=8]
[ext_resource path="res://scripts/slime.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "bounce",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 3 )

[sub_resource type="CircleShape2D" id=3]
radius = 96.0052

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7, 7.5 )

[node name="slime" type="KinematicBody2D"]
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "bounce"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, -0.5 )
shape = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
